<resources>
    <string name="app_name">Gry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_company">Dodaj Firmę</string>
    <string name="action_game">Dodaj Grę</string>

    <string name="name">Nazwa:</string>
    <string name="localization">Lokalizacja:</string>
    <string name="date">Data Założenia:</string>
    <string name="games">Gry:</string>
    <string name="year">Rok Wydania:</string>
    <string name="type">Gatunek:</string>
    <string name="price">Cena:</string>
    <string name="count">Ilość:</string>

    <string name="export_pdf">Export to PDF</string>
    <string name="export_html">Export to HTML</string>
    <string name="export_svg">Export to SVG</string>

    <string name="summary">Podsumowanie</string>
    <string name="action">Gry Akcji</string>
    <string name="arpg">Action Role-Playing Game</string>
    <string name="platform">Platformowe</string>

    <string name="save">Zapsiz</string>
    <string name="cancel">Anuluj</string>
</resources>
