<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/action_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/gameName_dialog"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/gameNameEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameDate_dialog"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/year"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""
            android:ems="10"
            android:id="@+id/gameDateEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:ems="10"
            android:id="@+id/gameTypeEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text=""
            android:ems="10"
            android:id="@+id/gamePriceEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/count"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""
            android:ems="10"
            android:id="@+id/gameCountEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_save_game"
            android:layout_weight="1" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_cancel_game"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>