<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/action_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/companyName_dialog"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/companyNameEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/companyLocalization_dialog"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/localization"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/companyLocalizationEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""
            android:ems="10"
            android:id="@+id/companyDateEditText_dialog"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_save"
            android:layout_weight="1" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button_cancel"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>